1-grammar/ParCPP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParCPP.y
-----------------------------------------------------------------------------

state 47 contains 1 shift/reduce conflicts.
state 229 contains 5 reduce/reduce conflicts.
state 295 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pListDef -> ListDef                         (1)
	%start_pDef -> Def                                 (2)
	%start_pStruct -> Struct                           (3)
	%start_pStm -> Stm                                 (4)
	%start_pVariable -> Variable                       (5)
	%start_pTypedef -> Typedef                         (6)
	%start_pArg -> Arg                                 (7)
	%start_pListArg -> ListArg                         (8)
	%start_pListStm -> ListStm                         (9)
	%start_pListVariable -> ListVariable               (10)
	%start_pExp15 -> Exp15                             (11)
	%start_pExp14 -> Exp14                             (12)
	%start_pExp13 -> Exp13                             (13)
	%start_pExp12 -> Exp12                             (14)
	%start_pExp11 -> Exp11                             (15)
	%start_pExp10 -> Exp10                             (16)
	%start_pExp9 -> Exp9                               (17)
	%start_pExp8 -> Exp8                               (18)
	%start_pExp4 -> Exp4                               (19)
	%start_pExp3 -> Exp3                               (20)
	%start_pExp2 -> Exp2                               (21)
	%start_pExp1 -> Exp1                               (22)
	%start_pExp -> Exp                                 (23)
	%start_pExp5 -> Exp5                               (24)
	%start_pExp6 -> Exp6                               (25)
	%start_pExp7 -> Exp7                               (26)
	%start_pListString -> ListString                   (27)
	%start_pListExp -> ListExp                         (28)
	%start_pTempInstant -> TempInstant                 (29)
	%start_pQConst -> QConst                           (30)
	%start_pName -> Name                               (31)
	%start_pListName -> ListName                       (32)
	%start_pListType -> ListType                       (33)
	%start_pType -> Type                               (34)
	%start_pAType -> AType                             (35)
	%start_pBType -> BType                             (36)
	%start_pGType -> GType                             (37)
	%start_pIdList -> IdList                           (38)
	%start_pListIdList -> ListIdList                   (39)
	Char -> L_charac                                   (40)
	Double -> L_doubl                                  (41)
	Integer -> L_integ                                 (42)
	String -> L_quoted                                 (43)
	Id -> L_Id                                         (44)
	Program -> ListDef                                 (45)
	ListDef ->                                         (46)
	ListDef -> Def ListDef                             (47)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (48)
	Def -> Type Id '(' ListArg ')' ';'                 (49)
	Def -> 'inline' Type Id '(' ListArg ')' '{' ListStm '}'   (50)
	Def -> 'inline' Type Id '(' ListArg ')' ';'        (51)
	Def -> Struct                                      (52)
	Def -> Variable ';'                                (53)
	Def -> Typedef                                     (54)
	Def -> 'using' QConst ';'                          (55)
	Struct -> 'struct' Id '{' ListVariable '}' ';'     (56)
	Stm -> Struct                                      (57)
	Stm -> Variable ';'                                (58)
	Stm -> Typedef                                     (59)
	Stm -> Exp ';'                                     (60)
	Stm -> 'return' Exp ';'                            (61)
	Stm -> 'while' '(' Exp ')' Stm                     (62)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (63)
	Stm -> 'for' '(' Variable ';' Exp ';' Exp ')' Stm   (64)
	Stm -> 'if' '(' Exp ')' Stm                        (65)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (66)
	Stm -> '{' ListStm '}'                             (67)
	Variable -> Type ListIdList                        (68)
	Typedef -> 'typedef' Type Id ';'                   (69)
	Arg -> Type                                        (70)
	Arg -> Type IdList                                 (71)
	ListArg ->                                         (72)
	ListArg -> Arg                                     (73)
	ListArg -> Arg ',' ListArg                         (74)
	ListStm ->                                         (75)
	ListStm -> Stm ListStm                             (76)
	ListVariable ->                                    (77)
	ListVariable -> Variable ';' ListVariable          (78)
	Exp15 -> Integer                                   (79)
	Exp15 -> Double                                    (80)
	Exp15 -> Char                                      (81)
	Exp15 -> ListString                                (82)
	Exp15 -> QConst                                    (83)
	Exp15 -> 'true'                                    (84)
	Exp15 -> 'false'                                   (85)
	Exp15 -> '(' Exp ')'                               (86)
	Exp14 -> Exp14 '[' Exp ']'                         (87)
	Exp14 -> Exp14 '(' ListExp ')'                     (88)
	Exp14 -> Exp14 '->' Exp15                          (89)
	Exp14 -> Exp14 '.' Exp15                           (90)
	Exp14 -> Exp14 '--'                                (91)
	Exp14 -> Exp14 '++'                                (92)
	Exp14 -> Exp15                                     (93)
	Exp13 -> '!' Exp13                                 (94)
	Exp13 -> '*' Exp13                                 (95)
	Exp13 -> '--' Exp13                                (96)
	Exp13 -> '++' Exp13                                (97)
	Exp13 -> '-' Exp13                                 (98)
	Exp13 -> '+' Exp13                                 (99)
	Exp13 -> Exp14                                     (100)
	Exp12 -> Exp12 '%' Exp13                           (101)
	Exp12 -> Exp12 '/' Exp13                           (102)
	Exp12 -> Exp12 '*' Exp13                           (103)
	Exp12 -> Exp13                                     (104)
	Exp11 -> Exp11 '-' Exp12                           (105)
	Exp11 -> Exp11 '+' Exp12                           (106)
	Exp11 -> Exp12                                     (107)
	Exp10 -> Exp10 '>>' Exp11                          (108)
	Exp10 -> Exp10 '<<' Exp11                          (109)
	Exp10 -> Exp11                                     (110)
	Exp9 -> Exp9 '<=>' Exp10                           (111)
	Exp9 -> Exp9 '<=' Exp10                            (112)
	Exp9 -> Exp9 '>=' Exp10                            (113)
	Exp9 -> Exp9 '>' Exp10                             (114)
	Exp9 -> Exp9 '<' Exp10                             (115)
	Exp9 -> Exp10                                      (116)
	Exp8 -> Exp8 '!=' Exp9                             (117)
	Exp8 -> Exp8 '==' Exp9                             (118)
	Exp8 -> Exp9                                       (119)
	Exp4 -> Exp4 '&&' Exp5                             (120)
	Exp4 -> Exp5                                       (121)
	Exp3 -> Exp3 '||' Exp4                             (122)
	Exp3 -> Exp4                                       (123)
	Exp2 -> Exp3 '+=' Exp2                             (124)
	Exp2 -> Exp3 '-=' Exp2                             (125)
	Exp2 -> Exp3 '=' Exp2                              (126)
	Exp2 -> Exp3 '?' Exp2 ':' Exp2                     (127)
	Exp2 -> Exp3                                       (128)
	Exp1 -> 'co_return' Exp                            (129)
	Exp1 -> 'co_yield' Exp                             (130)
	Exp1 -> 'co_await' Exp                             (131)
	Exp1 -> Exp2                                       (132)
	Exp -> Exp1                                        (133)
	Exp5 -> Exp6                                       (134)
	Exp6 -> Exp7                                       (135)
	Exp7 -> Exp8                                       (136)
	ListString -> String                               (137)
	ListString -> String ListString                    (138)
	ListExp ->                                         (139)
	ListExp -> Exp                                     (140)
	ListExp -> Exp ',' ListExp                         (141)
	TempInstant -> Id '<' ListType '>'                 (142)
	QConst -> ListName                                 (143)
	Name -> Id                                         (144)
	Name -> TempInstant                                (145)
	ListName -> Name                                   (146)
	ListName -> Name '::' ListName                     (147)
	ListType -> Type                                   (148)
	ListType -> Type ',' ListType                      (149)
	Type -> 'const' BType                              (150)
	Type -> 'constinit' AType                          (151)
	Type -> AType '&'                                  (152)
	Type -> AType                                      (153)
	AType -> 'const' GType                             (154)
	AType -> GType                                     (155)
	BType -> 'constinit' GType                         (156)
	BType -> GType                                     (157)
	GType -> 'int'                                     (158)
	GType -> 'bool'                                    (159)
	GType -> 'char'                                    (160)
	GType -> 'double'                                  (161)
	GType -> 'void'                                    (162)
	GType -> QConst                                    (163)
	IdList -> Id                                       (164)
	IdList -> Id '=' Exp                               (165)
	ListIdList -> IdList                               (166)
	ListIdList -> IdList ',' ListIdList                (167)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'<=>'          { PT _ (TS _ 25) }
	'='            { PT _ (TS _ 26) }
	'=='           { PT _ (TS _ 27) }
	'>'            { PT _ (TS _ 28) }
	'>='           { PT _ (TS _ 29) }
	'>>'           { PT _ (TS _ 30) }
	'?'            { PT _ (TS _ 31) }
	'['            { PT _ (TS _ 32) }
	']'            { PT _ (TS _ 33) }
	'bool'         { PT _ (TS _ 34) }
	'char'         { PT _ (TS _ 35) }
	'co_await'     { PT _ (TS _ 36) }
	'co_return'    { PT _ (TS _ 37) }
	'co_yield'     { PT _ (TS _ 38) }
	'const'        { PT _ (TS _ 39) }
	'constinit'    { PT _ (TS _ 40) }
	'do'           { PT _ (TS _ 41) }
	'double'       { PT _ (TS _ 42) }
	'else'         { PT _ (TS _ 43) }
	'false'        { PT _ (TS _ 44) }
	'for'          { PT _ (TS _ 45) }
	'if'           { PT _ (TS _ 46) }
	'inline'       { PT _ (TS _ 47) }
	'int'          { PT _ (TS _ 48) }
	'return'       { PT _ (TS _ 49) }
	'struct'       { PT _ (TS _ 50) }
	'true'         { PT _ (TS _ 51) }
	'typedef'      { PT _ (TS _ 52) }
	'using'        { PT _ (TS _ 53) }
	'void'         { PT _ (TS _ 54) }
	'while'        { PT _ (TS _ 55) }
	'{'            { PT _ (TS _ 56) }
	'||'           { PT _ (TS _ 57) }
	'}'            { PT _ (TS _ 58) }
	L_charac       { PT _ (TC $$) }
	L_doubl        { PT _ (TD $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pListDef rule  1
	%start_pDef     rule  2
	%start_pStruct  rule  3
	%start_pStm     rule  4
	%start_pVariable rule  5
	%start_pTypedef rule  6
	%start_pArg     rule  7
	%start_pListArg rule  8
	%start_pListStm rule  9
	%start_pListVariable rule  10
	%start_pExp15   rule  11
	%start_pExp14   rule  12
	%start_pExp13   rule  13
	%start_pExp12   rule  14
	%start_pExp11   rule  15
	%start_pExp10   rule  16
	%start_pExp9    rule  17
	%start_pExp8    rule  18
	%start_pExp4    rule  19
	%start_pExp3    rule  20
	%start_pExp2    rule  21
	%start_pExp1    rule  22
	%start_pExp     rule  23
	%start_pExp5    rule  24
	%start_pExp6    rule  25
	%start_pExp7    rule  26
	%start_pListString rule  27
	%start_pListExp rule  28
	%start_pTempInstant rule  29
	%start_pQConst  rule  30
	%start_pName    rule  31
	%start_pListName rule  32
	%start_pListType rule  33
	%start_pType    rule  34
	%start_pAType   rule  35
	%start_pBType   rule  36
	%start_pGType   rule  37
	%start_pIdList  rule  38
	%start_pListIdList rule  39
	Char            rule  40
	Double          rule  41
	Integer         rule  42
	String          rule  43
	Id              rule  44
	Program         rule  45
	ListDef         rules 46, 47
	Def             rules 48, 49, 50, 51, 52, 53, 54, 55
	Struct          rule  56
	Stm             rules 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67
	Variable        rule  68
	Typedef         rule  69
	Arg             rules 70, 71
	ListArg         rules 72, 73, 74
	ListStm         rules 75, 76
	ListVariable    rules 77, 78
	Exp15           rules 79, 80, 81, 82, 83, 84, 85, 86
	Exp14           rules 87, 88, 89, 90, 91, 92, 93
	Exp13           rules 94, 95, 96, 97, 98, 99, 100
	Exp12           rules 101, 102, 103, 104
	Exp11           rules 105, 106, 107
	Exp10           rules 108, 109, 110
	Exp9            rules 111, 112, 113, 114, 115, 116
	Exp8            rules 117, 118, 119
	Exp4            rules 120, 121
	Exp3            rules 122, 123
	Exp2            rules 124, 125, 126, 127, 128
	Exp1            rules 129, 130, 131, 132
	Exp             rule  133
	Exp5            rule  134
	Exp6            rule  135
	Exp7            rule  136
	ListString      rules 137, 138
	ListExp         rules 139, 140, 141
	TempInstant     rule  142
	QConst          rule  143
	Name            rules 144, 145
	ListName        rules 146, 147
	ListType        rules 148, 149
	Type            rules 150, 151, 152, 153
	AType           rules 154, 155
	BType           rules 156, 157
	GType           rules 158, 159, 160, 161, 162, 163
	IdList          rules 164, 165
	ListIdList      rules 166, 167

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'const'        shift, and enter state 66
	'constinit'    shift, and enter state 67
	'double'       shift, and enter state 55
	'inline'       shift, and enter state 161
	'int'          shift, and enter state 56
	'struct'       shift, and enter state 144
	'typedef'      shift, and enter state 145
	'using'        shift, and enter state 162
	'void'         shift, and enter state 57
	L_Id           shift, and enter state 45
	%eof           reduce using rule 46

	Id             goto state 47
	Program        goto state 165
	ListDef        goto state 166
	Def            goto state 164
	Struct         goto state 157
	Variable       goto state 158
	Typedef        goto state 159
	TempInstant    goto state 48
	QConst         goto state 49
	Name           goto state 50
	ListName       goto state 51
	Type           goto state 160
	AType          goto state 65
	GType          goto state 62

State 1

	%start_pListDef -> . ListDef                        (rule 1)

	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'const'        shift, and enter state 66
	'constinit'    shift, and enter state 67
	'double'       shift, and enter state 55
	'inline'       shift, and enter state 161
	'int'          shift, and enter state 56
	'struct'       shift, and enter state 144
	'typedef'      shift, and enter state 145
	'using'        shift, and enter state 162
	'void'         shift, and enter state 57
	L_Id           shift, and enter state 45
	%eof           reduce using rule 46

	Id             goto state 47
	ListDef        goto state 163
	Def            goto state 164
	Struct         goto state 157
	Variable       goto state 158
	Typedef        goto state 159
	TempInstant    goto state 48
	QConst         goto state 49
	Name           goto state 50
	ListName       goto state 51
	Type           goto state 160
	AType          goto state 65
	GType          goto state 62

State 2

	%start_pDef -> . Def                                (rule 2)

	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'const'        shift, and enter state 66
	'constinit'    shift, and enter state 67
	'double'       shift, and enter state 55
	'inline'       shift, and enter state 161
	'int'          shift, and enter state 56
	'struct'       shift, and enter state 144
	'typedef'      shift, and enter state 145
	'using'        shift, and enter state 162
	'void'         shift, and enter state 57
	L_Id           shift, and enter state 45

	Id             goto state 47
	Def            goto state 156
	Struct         goto state 157
	Variable       goto state 158
	Typedef        goto state 159
	TempInstant    goto state 48
	QConst         goto state 49
	Name           goto state 50
	ListName       goto state 51
	Type           goto state 160
	AType          goto state 65
	GType          goto state 62

State 3

	%start_pStruct -> . Struct                          (rule 3)

	'struct'       shift, and enter state 144

	Struct         goto state 155

State 4

	%start_pStm -> . Stm                                (rule 4)

	'!'            shift, and enter state 98
	'('            shift, and enter state 99
	'*'            shift, and enter state 100
	'+'            shift, and enter state 101
	'++'           shift, and enter state 102
	'-'            shift, and enter state 103
	'--'           shift, and enter state 104
	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'co_await'     shift, and enter state 105
	'co_return'    shift, and enter state 106
	'co_yield'     shift, and enter state 107
	'const'        shift, and enter state 66
	'constinit'    shift, and enter state 67
	'do'           shift, and enter state 140
	'double'       shift, and enter state 55
	'false'        shift, and enter state 108
	'for'          shift, and enter state 141
	'if'           shift, and enter state 142
	'int'          shift, and enter state 56
	'return'       shift, and enter state 143
	'struct'       shift, and enter state 144
	'true'         shift, and enter state 109
	'typedef'      shift, and enter state 145
	'void'         shift, and enter state 57
	'while'        shift, and enter state 146
	'{'            shift, and enter state 147
	L_charac       shift, and enter state 41
	L_doubl        shift, and enter state 110
	L_integ        shift, and enter state 111
	L_quoted       shift, and enter state 112
	L_Id           shift, and enter state 45

	Char           goto state 75
	Double         goto state 76
	Integer        goto state 77
	String         goto state 78
	Id             goto state 47
	Struct         goto state 133
	Stm            goto state 154
	Variable       goto state 135
	Typedef        goto state 136
	Exp15          goto state 79
	Exp14          goto state 80
	Exp13          goto state 81
	Exp12          goto state 82
	Exp11          goto state 83
	Exp10          goto state 84
	Exp9           goto state 85
	Exp8           goto state 86
	Exp4           goto state 87
	Exp3           goto state 88
	Exp2           goto state 89
	Exp1           goto state 90
	Exp            goto state 138
	Exp5           goto state 92
	Exp6           goto state 93
	Exp7           goto state 94
	ListString     goto state 95
	TempInstant    goto state 48
	QConst         goto state 139
	Name           goto state 50
	ListName       goto state 51
	Type           goto state 132
	AType          goto state 65
	GType          goto state 62

State 5

	%start_pVariable -> . Variable                      (rule 5)

	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'const'        shift, and enter state 66
	'constinit'    shift, and enter state 67
	'double'       shift, and enter state 55
	'int'          shift, and enter state 56
	'void'         shift, and enter state 57
	L_Id           shift, and enter state 45

	Id             goto state 47
	Variable       goto state 153
	TempInstant    goto state 48
	QConst         goto state 49
	Name           goto state 50
	ListName       goto state 51
	Type           goto state 132
	AType          goto state 65
	GType          goto state 62

State 6

	%start_pTypedef -> . Typedef                        (rule 6)

	'typedef'      shift, and enter state 145

	Typedef        goto state 152

State 7

	%start_pArg -> . Arg                                (rule 7)

	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'const'        shift, and enter state 66
	'constinit'    shift, and enter state 67
	'double'       shift, and enter state 55
	'int'          shift, and enter state 56
	'void'         shift, and enter state 57
	L_Id           shift, and enter state 45

	Id             goto state 47
	Arg            goto state 151
	TempInstant    goto state 48
	QConst         goto state 49
	Name           goto state 50
	ListName       goto state 51
	Type           goto state 150
	AType          goto state 65
	GType          goto state 62

State 8

	%start_pListArg -> . ListArg                        (rule 8)

	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'const'        shift, and enter state 66
	'constinit'    shift, and enter state 67
	'double'       shift, and enter state 55
	'int'          shift, and enter state 56
	'void'         shift, and enter state 57
	L_Id           shift, and enter state 45
	%eof           reduce using rule 72

	Id             goto state 47
	Arg            goto state 148
	ListArg        goto state 149
	TempInstant    goto state 48
	QConst         goto state 49
	Name           goto state 50
	ListName       goto state 51
	Type           goto state 150
	AType          goto state 65
	GType          goto state 62

State 9

	%start_pListStm -> . ListStm                        (rule 9)

	'!'            shift, and enter state 98
	'('            shift, and enter state 99
	'*'            shift, and enter state 100
	'+'            shift, and enter state 101
	'++'           shift, and enter state 102
	'-'            shift, and enter state 103
	'--'           shift, and enter state 104
	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'co_await'     shift, and enter state 105
	'co_return'    shift, and enter state 106
	'co_yield'     shift, and enter state 107
	'const'        shift, and enter state 66
	'constinit'    shift, and enter state 67
	'do'           shift, and enter state 140
	'double'       shift, and enter state 55
	'false'        shift, and enter state 108
	'for'          shift, and enter state 141
	'if'           shift, and enter state 142
	'int'          shift, and enter state 56
	'return'       shift, and enter state 143
	'struct'       shift, and enter state 144
	'true'         shift, and enter state 109
	'typedef'      shift, and enter state 145
	'void'         shift, and enter state 57
	'while'        shift, and enter state 146
	'{'            shift, and enter state 147
	L_charac       shift, and enter state 41
	L_doubl        shift, and enter state 110
	L_integ        shift, and enter state 111
	L_quoted       shift, and enter state 112
	L_Id           shift, and enter state 45
	%eof           reduce using rule 75

	Char           goto state 75
	Double         goto state 76
	Integer        goto state 77
	String         goto state 78
	Id             goto state 47
	Struct         goto state 133
	Stm            goto state 134
	Variable       goto state 135
	Typedef        goto state 136
	ListStm        goto state 137
	Exp15          goto state 79
	Exp14          goto state 80
	Exp13          goto state 81
	Exp12          goto state 82
	Exp11          goto state 83
	Exp10          goto state 84
	Exp9           goto state 85
	Exp8           goto state 86
	Exp4           goto state 87
	Exp3           goto state 88
	Exp2           goto state 89
	Exp1           goto state 90
	Exp            goto state 138
	Exp5           goto state 92
	Exp6           goto state 93
	Exp7           goto state 94
	ListString     goto state 95
	TempInstant    goto state 48
	QConst         goto state 139
	Name           goto state 50
	ListName       goto state 51
	Type           goto state 132
	AType          goto state 65
	GType          goto state 62

State 10

	%start_pListVariable -> . ListVariable              (rule 10)

	'bool'         shift, and enter state 53
	'char'         shift, and enter state 54
	'const'        shift, and enter state 66
	'constinit'    shift, and enter state 67
	'double'       shift, and enter state 55
	'int'          shift, and enter state 56
	'void'         shift, and enter state 57
	L_Id           shift, and enter state 45
	%eof           reduce using rule 77

	Id             goto state 47
	Variable       goto state 130
	ListVariable   goto state 131
	TempInstant    goto state 48
	QConst         goto state 49
	Name           goto state 50
	ListName       goto state 51
	Type           goto state 132
	AType          goto state 65
	GType          goto state 62

State 11

	%start_pExp15 -> . Exp15                            (rule 11)

	'('            shift, and enter state 99
	'false'        shift, and enter state 108
	'true'         shift, and enter state 109
	L_charac       shift, and enter state 41
	L_doubl        shift, and enter state 110
	L_integ        shift, and enter state 111
	L_quoted       shift, and enter state 112
	L_Id           shift, and enter state 45

	Char           goto state 75
	Double         goto state 76
	Integer        goto state 77
	String         goto state 78
	Id             goto state 47
	Exp15          goto state 129
	ListString     goto state 95
	TempInstant    goto state 48
	QConst         goto state 97
	Name           goto state 50
	ListName       goto state 51

State 12

	%start_pExp14 -> . Exp14                            (rule 12)

	'('            shift, and enter state 99
	'false'        shift, and enter state 108
	'true'         shift, and enter state 109
	L_charac       shift, and enter state 41
	L_doubl        shift, and enter state 110
	L_integ        shift, and enter state 111
	L_quoted       shift, and enter state 112
	L_Id           shift, and enter state 45

	Char           goto state 75
	Double         goto state 76
	Integer        goto state 77
	String         goto state 78
	Id             goto state 47
	Exp15          goto state 79
	Exp14          goto state 128
	ListString     goto state 95
	TempInstant    goto state 48
	QConst         goto state 97
	Name           goto state 50
	ListName       goto state 51

State 13

	%start_pExp13 -> . Exp13                            (rule 13)

	'!'            shift, and enter state 98
	'('            shift, and enter state 99
	'*'            shift, and enter state 100
	'+'            shift, and enter state 101
	'++'           shift, and enter state 102
	'-'            shift, and enter state 103
	'--'           shift, and enter state 104
	'false'        shift, and enter state 108
	'true'         shift, and enter state 109
	L_charac       shift, and enter state 41
	L_doubl        shift, and enter state 110
	L_integ        shift, and enter state 111
	L_quoted       shift, and enter state 112
	L_Id           shift, and enter state 45

	Char           goto state 75
	Double         goto state 76
	Integer        goto state 77
	String         goto state 78
	Id             goto state 47
	Exp15          goto state 79
	Exp14          goto state 80
	Exp13          goto state 127
	ListString     goto state 95
	TempInstant    goto state 48
	QConst         goto state 97
	Name           goto state 50
	ListName       goto state 51

State 14

	%start_pExp12 -> . Exp12                            (rule 14)

	'!'            shift, and enter state 98
	'('            shift, and enter state 99
	'*'            shift, and enter state 100
	'+'            shift, and enter state 101
	'++'           shift, and enter state 102
	'-'            shift, and enter state 103
	'--'           shift, and enter state 104
	'false'        shift, and enter state 108
	'true'         shift, and enter state 109
	L_charac       shift, and enter state 41
	L_doubl        shift, and enter state 110
	L_integ        shift, and enter state 111
	L_quoted       shift, and enter state 112
	L_Id           shift, and enter state 45

	Char           goto state 75
	Double         goto state 76
	Integer        goto state 77
	String         goto state 78
	Id             goto state 47
	Exp15          goto state 79
	Exp14          goto state 80
	Exp13          goto state 81
	Exp12          goto state 126
	ListString     goto state 95
	TempInstant    goto state 48
	QConst         goto state 97
	Name           goto state 50
	ListName       goto state 51

State 15

	%start_pExp11 -> . Exp11                            (rule 15)

	'!'            shift, and enter state 98
	'('            shift, and enter state 99
	'*'            shift, and enter state 100
	'+'            shift, and enter state 101
	'++'           shift, and enter state 102
	'-'            shift, and enter state 103
	'--'           shift, and enter state 104
	'false'        shift, and enter state 108
	'true'         shift, and enter state 109
	L_charac       shift, and enter state 41
	L_doubl        shift, and enter state 110
	L_integ        shift, and enter state 111
	L_quoted       shift, and enter state 112
	L_Id           shift, and enter state 45

	Char           goto state 75
	Double         goto state 76
	Integer        goto state 77
	String         goto state 78
	Id             goto state 47
	Exp15          goto state 79
	Exp14          goto state 80
	Exp13          goto state 81
	Exp12          goto state 82
	Exp11          goto state 125
	ListString     goto state 95
	TempInstant    goto state 48
	QConst         goto state 97
	Name           goto state 50
	ListName       goto state 51

State 16

	%start_pExp10 -> . Exp10                            (rule 16)

	'!'            shift, and enter state 98
	'('            shift, and enter state 99
	'*'            shift, and enter state 100
	'+'            shift, and enter state 101
	'++'           shift, and enter state 102
	'-'            shift, and enter state 103
	'--'           shift, and enter state 104
	'false'        shift, and enter state 108
	'true'         shift, and enter state 109
	L_charac       shift, and enter state 41
	L_doubl        shift, and enter state 110
	L_integ        shift, and enter state 111
	L_quoted       shift, and enter state 112
	L_Id           shift, and enter state 45

	Char           goto state 75
	Double         goto state 76
	Integer        goto state 77
	String         goto state 78
	Id             goto state 47
	Exp15          goto state 79
	Exp14          goto state 80
	Exp13          goto state 81
	Exp12          goto state 82
	Exp11          goto state 83
	Exp10          goto state 124
	ListString     goto state 95
	TempInstant    goto state 48
	QConst         goto state 97
	Name           goto state 50
	ListName       goto state 51

State 17

	%start_pExp9 -> . Exp9                              (rule 17)

	'!'            shift, and enter state 98
	'('            shift, and enter state 99
	'*'            shift, and enter state 100
	'+'            shift, and enter state 101
	'++'           shift, and enter state 102
	'-'            shift, and enter state 103
	'--'           shift, and enter state 104
	'false'        shift, and enter state 108
	'true'         shift, and enter state 109
	L_charac       shift, and enter state 41
	L_doubl        shift, and enter state 110
	L_integ        shift, and enter state 111
	L_quoted       shift, and enter state 112
	L_Id           shift, and enter state 45

	Char           goto state 75
	Double         goto state 76
	Integer        goto state 77
	String         goto state 78
	Id             goto state 47
	Exp15          goto state 79
	Exp14          goto state 80
	Exp13          goto state 81
	Exp12          goto state 82
	Exp11          goto state 83
	Exp10          goto state 84
	Exp9           goto state 123
	ListString     goto state 95
	TempInstant    goto state 48
	QConst         goto state 97
	Name           goto state 50
	ListName       goto state 51

State 18

	%start_pExp8 -> . Exp8                              (rule 18)

	'!'            shift, and enter state 98
	'('            shift, and enter state 99
	'*'            shift, and enter state 100
	'+'            shift, and enter state 101
	'++'           shift, and enter state 102
	'-'            shift, and enter state 103
	'--'           shift, and enter state 104
	'false'        shift, and enter state 108
	'true'         shift, and enter state 109
	L_charac       shift, and enter state 41
	L_doubl        shift, and enter state 110
	L_integ        shift, and enter state 111
	L_quoted       shift, and enter state 112
	L_Id           shift, and enter state 45

	Char           goto state 75
	Double         goto state 76
	Integer        goto state 77
	String         goto state 78
	Id             goto state 47
	Exp15          goto state 79
	Exp14          goto state 80
	Exp13          goto state 81
	Exp12          goto state 82
	Exp11          goto state 83
	Exp10          goto state 84
	Exp9           goto state 85
	Exp8           goto state 122
	ListString     goto state 95
	TempInstant    goto state 48
	QConst         goto state 97
	Name           goto state 50
	ListName       goto state 51

State 19

	%start_pExp4 -> . Exp4                              (rule 19)

	'!'            shift, and enter state 98
	'('            shift, and enter state 99
	'*'            shift, and enter state 100
	'+'            shift, and enter state 101
	'++'           shift, and enter state 102
	'-'            shift, and enter state 103
	'--'           shift, and enter state 104
	'false'        shift, and enter state 108
	'true'         shift, and enter state 109
	L_charac       shift, and enter state 41
	L_doubl        shift, and enter state 110
	L_integ        shift, and enter state 111
	L_quoted       shift, and enter state 112
	L_Id           shift, and enter state 45

	Char           goto state 75
	Double         goto state 76
	Integer        goto state 77
	String         goto state 78
	Id             goto state 47
	Exp15          goto state 79
	Exp14          goto state 80
	Exp13          goto state 81
	Exp12          goto state 82
	Exp11          goto state 83
	Exp10          goto state 84
	Exp9           goto state 85
	Exp8           goto state 86
	Exp4           goto state 121
	Exp5           goto state 92
	Exp6           goto state 93
	Exp7           goto state 94
	ListString     goto state 95
	TempInstant    goto state 48
	QConst         goto state 97
	Name           goto state 50
	ListName       goto state 51

State 20

	%start_pExp3 -> . Exp3                              (rule 20)

	'!'            shift, and enter state 98
	'('            shift, and enter state 99
	'*'            shift, and enter state 100
	'+'            shift, and enter state 101
	'++'           shift, and enter state 102
	'-'            shift, and enter state 103
	'--'           shift, and enter state 104
	'false'        shift, and enter state 108
	'true'         shift, and enter state 109
	L_charac       shift, and enter state 41
	L_doubl        shift, and enter state 110
	L_integ        shift, and enter state 111
	L_quoted       shift, and enter state 112
	L_Id           shift, and enter state 45

	Char           goto state 75
	Double         goto state 76
	Integer        goto state 77
	String         goto state 78
	Id             goto state 47
	Exp15          goto state 79
	Exp14          goto state 80
	Exp13          goto state 81
	Exp12          goto state 82
	Exp11          goto state 83
	Exp10          goto state 84
	Exp9           goto state 85
	Exp8           goto state 86
	Exp4           goto state 87
	Exp3           goto state 120
	Exp5           goto state 92
	Exp6           goto state 93
	Exp7           goto state 94
	ListString     goto state 95
	TempInstant    goto state 48
	QConst         goto state 97
	Name           goto state 50
	ListName       goto state 51

State 21

	%start_pExp2 -> . Exp2                              (rule 21)

	'!'            shift, and enter state 98
	'('            shift, and enter state 99
	'*'            shift, and enter state 100
	'+'            shift, and enter state 101
	'++'           shift, and enter state 102
	'-'            shift, and enter state 103
	'--'           shift, and enter state 104
	'false'        shift, and enter state 108
	'true'         shift, and enter state 109
	L_charac       shift, and enter state 41
	L_doubl        shift, and enter state 110
	L_integ        shift, and enter state 111
	L_quoted       shift, and enter state 112
	L_Id           shift, and enter state 45
